# MultipassSigScanner

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: load_gsl.cmake  load_json.cmake  load_tclap.cmake
src/: CMakeLists.txt  SigFileUtils.cpp  SigFileUtils.h  SigScanner.cpp  SigScanner.h  SigScannerEntry.cpp  SigScannerEntry.h  SigScannerJsonConfig.cpp  SigScannerJsonConfig.h  SigScannerMemoryData.cpp  SigScannerMemoryData.h  main.cpp
src/exceptions/: SigScannerFileOpenException.cpp  SigScannerFileOpenException.h
src/search/: SearchPattern.cpp  SearchPattern.h  SearchPatternBuilder.cpp  SearchPatternBuilder.h
src/search/detail/: SearchPatternBase.h  SearchPatternHexMatcher.cpp  SearchPatternHexMatcher.h  SearchPatternRefBSTR.cpp  SearchPatternRefBSTR.h
test/: CMakeLists.txt  TestSearchPattern.cpp  TestSearchPatternRefBSTR.cpp  TestSigFileUtils.cpp  TestSigScanner.cpp  TestSigScannerEntry.cpp  load_catch.cmake  test.cpp
test/test_data/: example_config.json  example_readme.txt
